--- a/.github/workflows/download_solution.yml
+++ b/.github/workflows/download_solution.yml
@@ -11,10 +11,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install Power Platform CLI
-        run: |
-          npm install -g pac-cli
-          
+      - name: Install Power Platform Tools
+        uses: microsoft/powerplatform-actions/actions-install@v1
+      
       - name: Run downloadFromSource.ps1
         shell: pwsh
         run: |
