--- a/.github/workflows/download_solution.yml
+++ b/.github/workflows/download_solution.yml
@@ -14,15 +14,21 @@ jobs:
       - name: Install Power Platform CLI from NuGet
         run: |
           nuget install Microsoft.PowerApps.CLI -OutputDirectory tools
-          # Add the CLI path to the system PATH so it can be used in subsequent steps
-          $pacPath = "$(pwd)\tools\Microsoft.PowerApps.CLI\tools"
+          # Set the pac CLI path correctly for Windows
+          $pacPath = "$($pwd.Path)\tools\Microsoft.PowerApps.CLI\tools"
           Write-Host "Adding pac CLI to PATH: $pacPath"
-          $env:PATH += ";$pacPath"
+          [System.Environment]::SetEnvironmentVariable('PATH', $env:PATH + ';' + $pacPath, [System.EnvironmentVariableTarget]::Process)
+
         shell: pwsh
 
       - name: Verify pac installation
         run: |
           pac --version
+        shell: pwsh
+
+      - name: Verify PAC CLI Installation with Full Path
+        run: |
+          $(pwd)\tools\Microsoft.PowerApps.CLI\tools\pac.exe --version
         shell: pwsh
       
       - name: Run downloadFromSource.ps1
